cleared latex errors, commented tri 2 reflection stuff, added literature review on regularisation as graph selection

--- a/works/thesis_report/bibliography.bib
+++ b/works/thesis_report/bibliography.bib
@@ -2,7 +2,7 @@
     author = {{Euler L.}},
     title = "Solutio problematis ad geometriam situs pertinentis",
     journal = "Commentarii Academiae Scientiarum Petropolitanae",
-    pages = "128–140",
+    pages = "128-140",
     year = "1741"
 }
 
@@ -72,14 +72,14 @@
 @article{krige,
     author = {{Krige D.}},
     title = "A Statistical Approach to Some Basic Mine Valuation Problems on the Witwatersrand",
-    journal = "Journal of the Chemical Metallurgical & Mining Society of South Africa",
+    journal = "Journal of the Chemical Metallurgical \& Mining Society of South Africa",
     year = "1951"
 }
 
 @book{wiener,
     author = {{Wiener N.}},
     title = "Extrapolation, interpolation, and smoothing of stationary time series.",
-    journal = "MIT Press",
+    publisher = "MIT Press",
     year = "1949"
 }
 
@@ -155,7 +155,7 @@ or symmetry",
 
 @article{l1_min,
     author = {{Tony C., et. al.}},
-    title = "A Constrained ℓ1 Minimization Approach to Sparse Precision Matrix Estimation",
+    title = "A Constrained L1 Minimization Approach to Sparse Precision Matrix Estimation",
     journal = "arXiv:1102.2233v1",
     year = "2011"
 }
@@ -165,6 +165,13 @@ or symmetry",
     title = "HIGH-DIMENSIONAL GRAPHS AND VARIABLE SELECTION WITH THE LASSO",
     journal = "arXiv:math/0608017v",
     year = "2006"
+}
+
+@article{friedmanglasso,
+    author = {{Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert}},
+    title = "Sparse inverse covariance estimation with the graphical lasso",
+    journal = "Biostatistics",
+    year = "2008"
 }
 
 @article{whittle,
@@ -187,6 +194,20 @@ or symmetry",
     title = "Kriging Hyperparameter Tuning Strategies",
     journal = "University of Southampton",
     year = "2020"
+}
+
+@article{park,
+    author = {{T. Park, G. Casella}},
+    title = "The Bayesian Lasso",
+    journal = "Journal of the American Statistical Association",
+    year = "2008"
+}
+
+@article{yue,
+  author = {{Z. Yue, P. Sundaram, V. Solo}},
+  journal = {School of Electrical Engineering and Telecommunications, UNSW, Sydney, AUSTRALIA, Martinos Center for Biomedical Imaging, Harvard Medical School, Charlestown, MA, USA},
+  title = {FAST BLOCK-SPARSE ESTIMATION FOR VECTOR NETWORKS},
+  year = {2020}
 }
 
 @misc{JPEG,
@@ -237,12 +258,12 @@ or symmetry",
     year = "2025",
     note = {\url{https://en.wikipedia.org/wiki/Dijkstra's_algorithm, Accessed 20/04/2025}}
 }
-https://psl.noaa.gov/data/correlation/oni.data
+
 @misc{noaa,
-    author = {{}},
-    title = "Oceanic Nino Index",
+    author = {{NOAA}},
+    title = "Global Surface Temperature Data",
     year = "2025",
-    note = {\url{https://psl.noaa.gov/data/correlation/oni.data}}
+    note = {\url{https://www.ncei.noaa.gov/pub/data/ghcn/daily/}}
 }
 
 @misc{floyd,
